Fix NullPointerException on reinitialization
Fixes #15001

Signed-off-by: Jacob Laursen <jacob-github@vindvejr.dk>